# python-project-52

./: .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml  pytest.ini  requirements.txt
labels/: models.py  tests.py  urls.py  views.py
labels/migrations/: 0001_initial.py  0002_labels_author_alter_labels_created_at_and_more.py
locale/ru/LC_MESSAGES/: django.mo  django.po
statuses/: models.py  urls.py  views.py
task_manager/: .gitignore  build.sh  forms.py  pytest.ini  ruff.toml  settings.py  urls.py  views.py
task_manager/apps/labels/: views.py
task_manager/apps/labels/migrations/: 0003_alter_labels_author.py
task_manager/apps/labels/tests/: test_labels.py
task_manager/apps/statuses/: views.py
task_manager/apps/statuses/tests/: test_statuses.py
task_manager/apps/tasks/: models.py  views.py
task_manager/apps/tasks/migrations/: 0001_initial.py  0005_alter_task_executor.py
task_manager/apps/user/: models.py  urls.py  views.py
task_manager/task_manager/: mixins.py  urls.py
task_manager/task_manager/templates/: confirm_delete.html
task_manager/templates/: home.html
task_manager/templates/labels/: label_form.html
task_manager/templates/layouts/: application.html
task_manager/templates/registration/: login.html
task_manager/templates/statuses/: status_confirm_delete.html  status_form.html  statuses_list.html
task_manager/templates/tasks/: task_confirm_delete.html  task_detail.html  task_form.html  task_list.html
task_manager/templates/users/: create.html  delete.html  user_list.html
task_manager/tests/: test_users.py
tasks/: models.py  tests.py  urls.py  views.py
tasks/migrations/: 0002_task_label.py
user/: models.py  urls.py  views.py
user/fixtures/: test_user.json
user/migrations/: 0001_initial.py
(+22 files in other folders)
