[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=2.3.0",
    "django>=5.1.6",
    "django-bootstrap5>=24.3",
    "django-widget-tweaks>=1.4.12",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.0.1",
    "psycopg2-binary>=2.9.10",
    "whitenoise>=6.9.0",
    "rollbar>=0.16.3"
]

[dependency-groups]
dev = [
    "ruff>=0.9.4",
]
