[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "dj-database-url>=2.3.0",
    "django>=5.1.6",
    "django-bootstrap5>=24.3",
    "django-widget-tweaks>=1.5.0",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.0.1",
    "psycopg2-binary>=2.9.10",
    "whitenoise>=6.9.0",
    "rollbar>=1.3.0"
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.9.4",
    "pytest>=8.1",
    "pytest-django>=4.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["task_manager"]